fix: fix text-align in Chars Game and

--- a/src/components/Games/CharsAndNumbers/scss/style.scss
+++ b/src/components/Games/CharsAndNumbers/scss/style.scss
@@ -37,6 +37,7 @@
                 text-transform: uppercase;
                 font: bold normal 1.5rem/110% Acrom, sans-serif;
                 color: $color-grey-light;
+                text-align: center;
             }
             .number-block-content {
                 width: 20%;
@@ -66,6 +67,7 @@
                 text-transform: uppercase;
                 font: bold normal 1.5rem/110% Acrom, sans-serif;
                 color: $color-grey-light;
+                text-align: center;
             }
 
             .char-block-content {
